# f95

./: .gitignore  CMakeLists.txt  README.md  build.sh  clear.sh
src/: CMakeLists.txt  driver.cpp  driver.hh  main.cpp  parser.y  scanner.l  test.txt
src/utilities/: boolean.cpp  boolean.h  integers.cpp  integers.h  main.cpp  strings.cpp  strings.h
testing/: main.cpp
testing/tests/answers/: do_loop.txt  logic.txt  strings.txt
testing/tests/tests/: arithmetic_basic.txt  complex_if_statements.txt  do_loop.txt  logic.txt  one_line_if.txt  strings.txt
